--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^16.4.2"
   },
   "dependencies": {
-    "emotion": "^9.2.6"
+    "emotion": "^9.2.6",
+    "emotion-theming": "^9.2.6",
+    "react-emotion": "^9.2.6"
   }
 }
